--- a/.devcontainer/gallery.html
+++ b/.devcontainer/gallery.html
@@ -38,7 +38,7 @@
         class="navbar navbar-dark sticky-top navbar-expand-lg bg-body-tertiary"
       >
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">BANDICAPS</a>
+          <a class="navbar-brand" href="index.html">BANDICAPS</a>
           <button
             class="navbar-toggler"
             type="button"
@@ -62,19 +62,13 @@
               </li>
 
               <li class="navbar-item">
-                <a
-                  class="nav-link active"
-                  aria-current="page"
-                  href="gallery.html"
+                <a class="nav-link active" aria-current="page" href="gallery.html"
                   >Gallery</a
                 >
               </li>
 
               <li class="navbar-item">
-                <a
-                  class="nav-link active"
-                  aria-current="page"
-                  href="members.html"
+                <a class="nav-link active" aria-current="page" href="members.html"
                   >Members</a
                 >
               </li>
@@ -84,34 +78,87 @@
       </nav>
     </div>
 
-    <!--TITLE and BACKGROUND IMAGE-->
-    <div class="container-fluid callout-container">
-      <div class="opaque-overlay">&nbsp;</div>
-      <div class="callout">
-        <div class="row">
-          <div class="col-12">
-            <section class="callout jumbotron text-center">
-              <h1 id="home-header">BANDICAPS</h1>
-              <p id="home-text">GOLF SOCIETY</p>
-              <button
-                type="button"
-                class="btn btn-sm"
-                style="
-                  --bs-btn-padding-y: 0.5rem;
-                  --bs-btn-padding-x: 6rem;
-                  --bs-btn-font-size: 0.8rem;
-                "
-              >
-                <a href="gallery.html" class="about-btn">ABOUT US</a>
-              </button>
-            </section>
+    <section class="container-fluid about-container">
+      <div class="row">
+        <!-- <div class="col-12"> -->
+          <div class="jumbotron">
+            <h1 class="gallery-title">About Us</h1>
+            <p id="about-subhead">Who are the Bandicaps?</p>
           </div>
-        </div>
+          <div id="about-text">
+            <p>
+              The Bandicaps Golf Society epitomizes the perfect blend of
+              leisure and camaraderie for golf enthusiasts. Amidst stunning
+              landscapes, this society embraces a laid-back approach to the
+              game, focusing on the social aspect as much as the golfing itself.
+              Members gather for relaxed rounds where laughter and shared
+              stories are as important as the strokes. With a diverse membership
+              ranging from beginners to seasoned players, everyone finds a
+              welcoming environment to play, connect, and unwind. Through their
+              regular friendly matches and post-game gatherings, the Sunshine
+              Social Golf Society encapsulates the true spirit of golf as a
+              means of building connections and cherished memories.
+            </p>
+      </div>
+    </section>
+  </div>
+  <div id="line-break"></div>
+</div>
+
+<!-- GALLERY -->
+<section class="container-fluid gallery-container">
+<h1 class="gallery-header">Gallery</h1>
+<div id="gallery-details" class="row gallery-section">
+  <div class="column gallery-column">
+   <img src="assets/styles/images/golf1.jpg" alt="">
+    <img src="assets/styles/images/golf2.jpg" alt="">
+  </div>
+  <div class="column gallery-column">
+    <img src="assets/styles/images/golf3.jpg" alt="">
+    <img src="assets/styles/images/golf4.jpg" alt="">
+  </div>
+  <div class="column gallery-column">
+    <img src="assets/styles/images/golf5.jpg" alt="">
+    <img src="assets/styles/images/golf6.jpg" alt="">
+  </div>
+  <div class="column gallery-column">
+    <img src="assets/styles/images/golf7.jpg" alt="">
+    <img src="assets/styles/images/golf8.jpg" alt="">
+  </div>
+</div>
+</section>
+
+</div>
+<div id="line-break"></div>
+</div>
+
+<section class="container-fluid text-center open-container">
+  <div class="open-title"> Open Championships</div>
+  <div id="open-details" class="row">
+    <div class="col-sm-12 col-md-4 col-lg-4">
+      <i class="fa-solid fa-backward"></i>
+      <h1 class="open-header">Previous Open</h1>
+      <p>Peterstone Lakes</p>
+      <img class="img-thumbnail open-image" src="assets/styles/images/open-peterstone.jpg" alt="golf">
+    </div>
+    <div class="col-sm-12 col-md-4 col-lg-4">
+      <i class="fa-solid fa-trophy"></i>
+      <h1 class="open-header">Current Champion</h1>
+      <p>Ant Eater</p>
+      <img class="img-thumbnail open-image" src="assets/styles/images/openimage4.jpg" alt="golf">
+      </div>
+    <div class="col-sm-12 col-md-4 col-lg-4">
+      <i class="fa-solid fa-forward"></i>
+      <h1 class="open-header">Next Open</h1>
+      <p>Llanishen Golf Club</p>
+      <img class="img-thumbnail open image" src="assets/styles/images/openllanishen.jpg" alt="golf">
       </div>
     </div>
+    </div>
+  </div>
+</section>
 
     <!-- FOOTER and SOCIALS -->
-
     <footer class="container-fluid text-center footer-container">
       <div id="footer-details" class="row">
         <div class="col">
