Final touches - updated Readme

--- a/.devcontainer/gallery.html
+++ b/.devcontainer/gallery.html
@@ -11,13 +11,9 @@
       crossorigin="anonymous"
     />
 
-    <link />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Exo:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;1,700&family=Phudu:wght@300&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,700&family=Ultra&display=swap"
-      rel="stylesheet"
-    />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Exo:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;1,700&family=Oswald:wght@300;400;500;600;700&family=Phudu:wght@300&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,700&family=Ultra&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="Assets/styles/style.css" />
     <link
       rel="stylesheet"
@@ -92,7 +88,10 @@
               landscapes, this society embraces a laid-back approach to the
               game, focusing on the social aspect as much as the golfing itself.
               Members gather for relaxed rounds where laughter and shared
-              stories are as important as the strokes. With a diverse membership
+              stories are as important as the strokes. 
+              <br>
+              <br>
+              With a diverse membership
               ranging from beginners to seasoned players, everyone finds a
               welcoming environment to play, connect, and unwind. Through their
               regular friendly matches and post-game gatherings, the Sunshine
@@ -110,45 +109,41 @@
 <h1 class="gallery-header">Gallery</h1>
 <div id="gallery-details" class="row gallery-section">
   <div class="column gallery-column">
-   <img src="assets/styles/images/golf1.jpg" alt="">
-    <img src="assets/styles/images/golf2.jpg" alt="">
+    <img src="assets/styles/images/buggiegroup.jpg" alt="">
+    <img src="assets/styles/images/fairway.jpg" alt="">
   </div>
   <div class="column gallery-column">
-    <img src="assets/styles/images/golf3.jpg" alt="">
-    <img src="assets/styles/images/golf4.jpg" alt="">
+    <img src="assets/styles/images/buggies.jpg" alt="">
+    <img src="assets/styles/images/putting.jpg" alt="">
   </div>
   <div class="column gallery-column">
     <img src="assets/styles/images/golf5.jpg" alt="">
-    <img src="assets/styles/images/golf6.jpg" alt="">
+    <img src="assets/styles/images/golf8.jpg" alt="">
   </div>
   <div class="column gallery-column">
     <img src="assets/styles/images/golf7.jpg" alt="">
-    <img src="assets/styles/images/golf8.jpg" alt="">
+    <img src="assets/styles/images/galleryimage.jpg" alt="">
   </div>
 </div>
 </section>
 
-</div>
-<div id="line-break"></div>
-</div>
-
 <section class="container-fluid text-center open-container">
-  <div class="open-title"> Open Championships</div>
+  <div class="open-title"> The Bandicaps Open</div>
   <div id="open-details" class="row">
     <div class="col-sm-12 col-md-4 col-lg-4">
-      <i class="fa-solid fa-backward"></i>
+      <i class="fa-solid fa-backward icon-open"></i>
       <h1 class="open-header">Previous Open</h1>
       <p>Peterstone Lakes</p>
       <img class="img-thumbnail open-image" src="assets/styles/images/open-peterstone.jpg" alt="golf">
     </div>
     <div class="col-sm-12 col-md-4 col-lg-4">
-      <i class="fa-solid fa-trophy"></i>
+      <i class="fa-solid fa-trophy icon-open"></i>
       <h1 class="open-header">Current Champion</h1>
       <p>Ant Eater</p>
-      <img class="img-thumbnail open-image" src="assets/styles/images/openimage4.jpg" alt="golf">
+      <img class="img-thumbnail open-image" src="assets/styles/images/golf1.jpg" alt="golf">
       </div>
     <div class="col-sm-12 col-md-4 col-lg-4">
-      <i class="fa-solid fa-forward"></i>
+      <i class="fa-solid fa-forward icon-open"></i>
       <h1 class="open-header">Next Open</h1>
       <p>Llanishen Golf Club</p>
       <img class="img-thumbnail open image" src="assets/styles/images/openllanishen.jpg" alt="golf">
