--- a/.devcontainer/Index.html
+++ b/.devcontainer/Index.html
@@ -11,11 +11,10 @@
       crossorigin="anonymous"
     />
 
-    <link />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Exo:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;1,700&family=Phudu:wght@300&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,700&family=Ultra&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Exo:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;1,700&family=Oswald:wght@300;400;500;600;700&family=Phudu:wght@300&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,700&family=Ultra&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="Assets/styles/style.css" />
