--- a/.devcontainer/members.html
+++ b/.devcontainer/members.html
@@ -11,13 +11,9 @@
       crossorigin="anonymous"
     />
 
-    <link />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Exo:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;1,700&family=Phudu:wght@300&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,700&family=Ultra&display=swap"
-      rel="stylesheet"
-    />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Exo:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;1,700&family=Oswald:wght@300;400;500;600;700&family=Phudu:wght@300&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,700&family=Ultra&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="Assets/styles/style.css" />
     <link
       rel="stylesheet"
@@ -89,11 +85,11 @@
       <div class="form-container">
           <div class="row">
             <div class="callout jumbotron text-center">
-              <h1 id="home-header">MEMBERS</h1>
-              <p id="home-text">Sign in!</p>
+              <h1 id="members-header">MEMBERS</h1>
+              <p id="members-text">Sign in</p>
             </div>
-            <form>
-              <div class="row mb-3">
+            <form id="form-details">
+              <div class="row mb-3 d-flex justify-content-center">
                 <div class="col-sm-10">
                   <input
                     type="email"
@@ -103,7 +99,7 @@
                   />
                 </div>
               </div>
-              <div class="row mb-3">
+              <div class="row mb-3 d-flex justify-content-center">
                 <div class="col-sm-10">
                   <input
                     type="password"
@@ -114,9 +110,8 @@
                 </div>
               </div>
                 </div>
-              </fieldset>
               <div class="row mb-3">
-                <div class="col-sm-10 offset-sm-2">
+                <div class="col-sm-10 d-flex justify-content-center remember-device">
                   <div class="form-check">
                     <input
                       class="form-check-input"
@@ -143,7 +138,9 @@
         <div class=" container-fluid apply-container">
           <h1 class="apply-header">Want to become a member?</h1>   
 <p class="apply-text">
-Join our relaxed golf society for a laid-back approach to the game. We welcome golfers of all levels, emphasizing fun over competition. Enjoy easygoing rounds, friendly banter, and a welcoming community. Whether you're a seasoned pro or new to golf, apply now and experience golfing camaraderie like never before. <a href="#" class="app-download">Download Application Form<i class="fa-solid fa-download fa-xs"></i></a></p>
+Join our relaxed golf society for a laid-back approach to the game. We welcome golfers of all levels, emphasizing fun over competition. Enjoy easygoing rounds, friendly banter, and a welcoming community. Whether you're a seasoned pro or new to golf, apply now and experience golfing camaraderie like never before. 
+<br>
+<a href="#" class="app-download">Download Application Form <i class="fa-solid fa-download fa-xs"></i></a></p>
       </div>
       </div>
     </section>
