--- a/.devcontainer/gallery.html
+++ b/.devcontainer/gallery.html
@@ -139,7 +139,7 @@
     <div class="col-sm-12 col-md-4 col-lg-4">
       <i class="fa-solid fa-trophy icon-open"></i>
       <h1 class="open-header">Current Champion</h1>
-      <p>Ant Eater</p>
+      <p>John Williams</p>
       <img class="img-thumbnail open-image" src="assets/styles/images/golf1.jpg" alt="golf">
       </div>
     <div class="col-sm-12 col-md-4 col-lg-4">
