move HTML to root

--- a/gallery.html
+++ b/gallery.html
@@ -109,20 +109,20 @@
 <h1 class="gallery-header">Gallery</h1>
 <div id="gallery-details" class="row gallery-section">
   <div class="column gallery-column">
-    <img src="assets/styles/images/buggiegroup.jpg" alt="">
-    <img src="assets/styles/images/fairway.jpg" alt="">
+    <img src="assets/images/buggiegroup.jpg" alt="">
+    <img src="assets/images/fairway.jpg" alt="">
   </div>
   <div class="column gallery-column">
-    <img src="assets/styles/images/buggies.jpg" alt="">
-    <img src="assets/styles/images/putting.jpg" alt="">
+    <img src="assets/images/buggies.jpg" alt="">
+    <img src="assets/images/putting.jpg" alt="">
   </div>
   <div class="column gallery-column">
-    <img src="assets/styles/images/golf5.jpg" alt="">
-    <img src="assets/styles/images/golf8.jpg" alt="">
+    <img src="assets/images/golf5.jpg" alt="">
+    <img src="assets/images/golf8.jpg" alt="">
   </div>
   <div class="column gallery-column">
-    <img src="assets/styles/images/golf7.jpg" alt="">
-    <img src="assets/styles/images/galleryimage.jpg" alt="">
+    <img src="assets/images/golf7.jpg" alt="">
+    <img src="assets/images/galleryimage.jpg" alt="">
   </div>
 </div>
 </section>
@@ -134,19 +134,19 @@
       <i class="fa-solid fa-backward icon-open"></i>
       <h1 class="open-header">Previous Open</h1>
       <p>Peterstone Lakes</p>
-      <img class="img-thumbnail open-image" src="assets/styles/images/open-peterstone.jpg" alt="golf">
+      <img class="img-thumbnail open-image" src="assets/images/open-peterstone.jpg" alt="golf">
     </div>
     <div class="col-sm-12 col-md-4 col-lg-4">
       <i class="fa-solid fa-trophy icon-open"></i>
       <h1 class="open-header">Current Champion</h1>
       <p>John Williams</p>
-      <img class="img-thumbnail open-image" src="assets/styles/images/golf1.jpg" alt="golf">
+      <img class="img-thumbnail open-image" src="assets/images/golf1.jpg" alt="golf">
       </div>
     <div class="col-sm-12 col-md-4 col-lg-4">
       <i class="fa-solid fa-forward icon-open"></i>
       <h1 class="open-header">Next Open</h1>
       <p>Llanishen Golf Club</p>
-      <img class="img-thumbnail open image" src="assets/styles/images/openllanishen.jpg" alt="golf">
+      <img class="img-thumbnail open image" src="assets/images/openllanishen.jpg" alt="golf">
       </div>
     </div>
     </div>
