--- a/members.html
+++ b/members.html
@@ -88,14 +88,16 @@
               <h1 id="members-header">MEMBERS</h1>
               <p id="members-text">Sign in</p>
             </div>
-            <form id="form-details">
+            <form id="form-details" method="POST" action="https://formdump.codeinstitute.net" aria-label="Inquiry Form">
               <div class="row mb-3 d-flex justify-content-center">
                 <div class="col-sm-10">
                   <input
                     type="email"
+                    name="email"
                     class="form-control"
                     id="inputEmail3"
-                    placeholder="Email / Username"
+                    placeholder="Email"
+                    required
                   />
                 </div>
               </div>
@@ -103,9 +105,11 @@
                 <div class="col-sm-10">
                   <input
                     type="password"
+                    name="password"
                     class="form-control"
                     id="inputPassword3"
                     placeholder="Password"
+                    required
                   />
                 </div>
               </div>
@@ -124,12 +128,12 @@
                   </div>
                 </div>
               </div>
-            </form>
             <div class="text-center">
-            <button type="button" class="btn btn-primary mx-auto"
+            <button type="submit" class="btn btn-primary mx-auto" value="Submit"
         style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: 4rem; --bs-btn-font-size: .75rem;">
   Log In
 </button>
+</form>
 </div>
         </div>
       </div>
