--- a/gallery.html
+++ b/gallery.html
@@ -153,30 +153,30 @@
   </div>
 </section>
 
-    <!-- FOOTER and SOCIALS -->
-    <footer class="container-fluid text-center footer-container">
-      <div id="footer-details" class="row">
-        <div class="col">
-          <a href="#"
-            ><i class="fa-brands fa-instagram fa-xl social-color"></i
-          ></a>
-        </div>
-        <div class="col">
-          <a href="#"
-            ><i class="fa-brands fa-facebook-f fa-xl social-color"></i
-          ></a>
-        </div>
-        <div class="col">
-          <a href="#"
-            ><i class="fa-brands fa-twitter fa-xl social-color"></i
-          ></a>
-        </div>
-        <div class="col">
-          <a href="#"
-            ><i class="fa-brands fa-youtube fa-xl social-color"></i
-          ></a>
-        </div>
-      </div>
-    </footer>
+<!-- FOOTER and SOCIALS - links to all socials-->
+<footer class="container-fluid text-center footer-container">
+  <div id="footer-details" class="row">
+    <div class="col">
+      <a href="https://www.instagram.com" target="_blank"
+        ><i class="fa-brands fa-instagram fa-xl social-color"></i
+      ></a>
+    </div>
+    <div class="col">
+      <a href="https://www.facebook.com" target="_blank"
+        ><i class="fa-brands fa-facebook-f fa-xl social-color"></i
+      ></a>
+    </div>
+    <div class="col">
+      <a href="https://www.twitter.com" target="_blank"
+        ><i class="fa-brands fa-twitter fa-xl social-color"></i
+      ></a>
+    </div>
+    <div class="col">
+      <a href="https://www.youtube.com" target="_blank"
+        ><i class="fa-brands fa-youtube fa-xl social-color"></i
+      ></a>
+    </div>
+  </div>
+</footer>
   </body>
 </html>
