added meta descriptions

--- a/index.html
+++ b/index.html
@@ -3,6 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Golf. Golf Society. Bandicaps Golf Society. Golf Course. Golf Social. Golf clubs."
+    />
+    <meta
+      name="keywords"
+      content="golf, golf society, bandicaps golf society, golf clubs, golf sport, sport, golf, course"
+    />
     <title>BANDICAPS Golf Society</title>
     <link
       rel="stylesheet"
@@ -32,6 +40,7 @@
     ></script>
   </head>
   <body>
+    <!-- NAVBAR - Responsive NAVBAR with Hamburger button-->
     <div class="container-fluid navbar-container">
       <nav
         class="navbar navbar-dark sticky-top navbar-expand-lg bg-body-tertiary"
@@ -83,7 +92,7 @@
       </nav>
     </div>
 
-    <!--TITLE and BACKGROUND IMAGE-->
+    <!--TITLE and BACKGROUND IMAGE - Opaque overlay used to make title stand out-->
     <div class="container-fluid callout-container">
       <div class="opaque-overlay">&nbsp;</div>
       <div class="callout">
@@ -109,27 +118,26 @@
       </div>
     </div>
 
-    <!-- FOOTER and SOCIALS -->
-
+    <!-- FOOTER and SOCIALS - links to all socials-->
     <footer class="container-fluid text-center footer-container">
       <div id="footer-details" class="row">
         <div class="col">
-          <a href="#"
+          <a href="https://www.instagram.com" target="_blank"
             ><i class="fa-brands fa-instagram fa-xl social-color"></i
           ></a>
         </div>
         <div class="col">
-          <a href="#"
+          <a href="https://www.facebook.com" target="_blank"
             ><i class="fa-brands fa-facebook-f fa-xl social-color"></i
           ></a>
         </div>
         <div class="col">
-          <a href="#"
+          <a href="https://www.twitter.com" target="_blank"
             ><i class="fa-brands fa-twitter fa-xl social-color"></i
           ></a>
         </div>
         <div class="col">
-          <a href="#"
+          <a href="https://www.youtube.com" target="_blank"
             ><i class="fa-brands fa-youtube fa-xl social-color"></i
           ></a>
         </div>
