added validation pass images

--- a/gallery.html
+++ b/gallery.html
@@ -11,9 +11,12 @@
       crossorigin="anonymous"
     />
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Exo:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;1,700&family=Oswald:wght@300;400;500;600;700&family=Phudu:wght@300&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,700&family=Ultra&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Exo:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;1,700&family=Oswald:wght@300;400;500;600;700&family=Phudu:wght@300&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,700&family=Ultra&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="assets/styles/style.css" />
     <link
       rel="stylesheet"
@@ -58,13 +61,19 @@
               </li>
 
               <li class="navbar-item">
-                <a class="nav-link active" aria-current="page" href="gallery.html"
+                <a
+                  class="nav-link active"
+                  aria-current="page"
+                  href="gallery.html"
                   >Gallery</a
                 >
               </li>
 
               <li class="navbar-item">
-                <a class="nav-link active" aria-current="page" href="members.html"
+                <a
+                  class="nav-link active"
+                  aria-current="page"
+                  href="members.html"
                   >Members</a
                 >
               </li>
@@ -77,106 +86,115 @@
     <section class="container-fluid about-container">
       <div class="row">
         <!-- <div class="col-12"> -->
-          <div class="jumbotron">
-            <h1 class="gallery-title">About Us</h1>
-            <p id="about-subhead">Who are the Bandicaps?</p>
-          </div>
-          <div id="about-text">
-            <p>
-              The Bandicaps Golf Society epitomizes the perfect blend of
-              leisure and camaraderie for golf enthusiasts. Amidst stunning
-              landscapes, this society embraces a laid-back approach to the
-              game, focusing on the social aspect as much as the golfing itself.
-              Members gather for relaxed rounds where laughter and shared
-              stories are as important as the strokes. 
-              <br>
-              <br>
-              With a diverse membership
-              ranging from beginners to seasoned players, everyone finds a
-              welcoming environment to play, connect, and unwind. Through their
-              regular friendly matches and post-game gatherings, the Sunshine
-              Social Golf Society encapsulates the true spirit of golf as a
-              means of building connections and cherished memories.
-            </p>
+        <div class="jumbotron">
+          <h1 class="gallery-title">About Us</h1>
+          <p id="about-subhead">Who are the Bandicaps?</p>
+        </div>
+        <div id="about-text">
+          <p>
+            The Bandicaps Golf Society epitomizes the perfect blend of leisure
+            and camaraderie for golf enthusiasts. Amidst stunning landscapes,
+            this society embraces a laid-back approach to the game, focusing on
+            the social aspect as much as the golfing itself. Members gather for
+            relaxed rounds where laughter and shared stories are as important as
+            the strokes.
+            <br />
+            <br />
+            With a diverse membership ranging from beginners to seasoned
+            players, everyone finds a welcoming environment to play, connect,
+            and unwind. Through their regular friendly matches and post-game
+            gatherings, the Sunshine Social Golf Society encapsulates the true
+            spirit of golf as a means of building connections and cherished
+            memories.
+          </p>
+        </div>
       </div>
     </section>
-  </div>
-  <div id="line-break"></div>
-</div>
+    <div id="line-break"></div>
 
-<!-- GALLERY -->
-<section class="container-fluid gallery-container">
-<h1 class="gallery-header">Gallery</h1>
-<div id="gallery-details" class="row gallery-section">
-  <div class="column gallery-column">
-    <img src="assets/images/buggy-golfer.jpg" alt="">
-    <img src="assets/images/fairway.jpg" alt="">
-  </div>
-  <div class="column gallery-column">
-    <img src="assets/images/buggies.jpg" alt="">
-    <img src="assets/images/putting.jpg" alt="">
-  </div>
-  <div class="column gallery-column">
-    <img src="assets/images/golf5.jpg" alt="">
-    <img src="assets/images/golf8.jpg" alt="">
-  </div>
-  <div class="column gallery-column">
-    <img src="assets/images/golf7.jpg" alt="">
-    <img src="assets/images/galleryimage.jpg" alt="">
-  </div>
-</div>
-</section>
-
-<section class="container-fluid text-center open-container">
-  <div class="open-title"> The Bandicaps Open</div>
-  <div id="open-details" class="row">
-    <div class="col-sm-12 col-md-4 col-lg-4">
-      <i class="fa-solid fa-backward icon-open"></i>
-      <h1 class="open-header">Previous Open</h1>
-      <p>Peterstone Lakes</p>
-      <img class="img-thumbnail open-image" src="assets/images/open-peterstone.jpg" alt="golf">
-    </div>
-    <div class="col-sm-12 col-md-4 col-lg-4">
-      <i class="fa-solid fa-trophy icon-open"></i>
-      <h1 class="open-header">Current Champion</h1>
-      <p>John Williams</p>
-      <img class="img-thumbnail open-image" src="assets/images/golf1.jpg" alt="golf">
+    <!-- GALLERY -->
+    <section class="container-fluid gallery-container">
+      <h1 class="gallery-header">Gallery</h1>
+      <div id="gallery-details" class="row gallery-section">
+        <div class="column gallery-column">
+          <img src="assets/images/buggy-golfer.jpg" alt="" />
+          <img src="assets/images/fairway.jpg" alt="" />
+        </div>
+        <div class="column gallery-column">
+          <img src="assets/images/buggies.jpg" alt="" />
+          <img src="assets/images/putting.jpg" alt="" />
+        </div>
+        <div class="column gallery-column">
+          <img src="assets/images/golf5.jpg" alt="" />
+          <img src="assets/images/golf8.jpg" alt="" />
+        </div>
+        <div class="column gallery-column">
+          <img src="assets/images/golf7.jpg" alt="" />
+          <img src="assets/images/galleryimage.jpg" alt="" />
+        </div>
       </div>
-    <div class="col-sm-12 col-md-4 col-lg-4">
-      <i class="fa-solid fa-forward icon-open"></i>
-      <h1 class="open-header">Next Open</h1>
-      <p>Llanishen Golf Club</p>
-      <img class="img-thumbnail open image" src="assets/images/openllanishen.jpg" alt="golf">
-      </div>
-    </div>
-    </div>
-  </div>
-</section>
+    </section>
 
-<!-- FOOTER and SOCIALS - links to all socials-->
-<footer class="container-fluid text-center footer-container">
-  <div id="footer-details" class="row">
-    <div class="col">
-      <a href="https://www.instagram.com" target="_blank"
-        ><i class="fa-brands fa-instagram fa-xl social-color"></i
-      ></a>
-    </div>
-    <div class="col">
-      <a href="https://www.facebook.com" target="_blank"
-        ><i class="fa-brands fa-facebook-f fa-xl social-color"></i
-      ></a>
-    </div>
-    <div class="col">
-      <a href="https://www.twitter.com" target="_blank"
-        ><i class="fa-brands fa-twitter fa-xl social-color"></i
-      ></a>
-    </div>
-    <div class="col">
-      <a href="https://www.youtube.com" target="_blank"
-        ><i class="fa-brands fa-youtube fa-xl social-color"></i
-      ></a>
-    </div>
-  </div>
-</footer>
+    <section class="container-fluid text-center open-container">
+      <div class="open-title">The Bandicaps Open</div>
+      <div id="open-details" class="row">
+        <div class="col-sm-12 col-md-4 col-lg-4">
+          <i class="fa-solid fa-backward icon-open"></i>
+          <h1 class="open-header">Previous Open</h1>
+          <p>Peterstone Lakes</p>
+          <img
+            class="img-thumbnail open-image"
+            src="assets/images/open-peterstone.jpg"
+            alt="golf"
+          />
+        </div>
+        <div class="col-sm-12 col-md-4 col-lg-4">
+          <i class="fa-solid fa-trophy icon-open"></i>
+          <h1 class="open-header">Current Champion</h1>
+          <p>John Williams</p>
+          <img
+            class="img-thumbnail open-image"
+            src="assets/images/golf1.jpg"
+            alt="golf"
+          />
+        </div>
+        <div class="col-sm-12 col-md-4 col-lg-4">
+          <i class="fa-solid fa-forward icon-open"></i>
+          <h1 class="open-header">Next Open</h1>
+          <p>Llanishen Golf Club</p>
+          <img
+            class="img-thumbnail open image"
+            src="assets/images/openllanishen.jpg"
+            alt="golf"
+          />
+        </div>
+      </div>
+    </section>
+
+    <!-- FOOTER and SOCIALS - links to all socials-->
+    <footer class="container-fluid text-center footer-container">
+      <div id="footer-details" class="row">
+        <div class="col">
+          <a href="https://www.instagram.com" target="_blank"
+            ><i class="fa-brands fa-instagram fa-xl social-color"></i
+          ></a>
+        </div>
+        <div class="col">
+          <a href="https://www.facebook.com" target="_blank"
+            ><i class="fa-brands fa-facebook-f fa-xl social-color"></i
+          ></a>
+        </div>
+        <div class="col">
+          <a href="https://www.twitter.com" target="_blank"
+            ><i class="fa-brands fa-twitter fa-xl social-color"></i
+          ></a>
+        </div>
+        <div class="col">
+          <a href="https://www.youtube.com" target="_blank"
+            ><i class="fa-brands fa-youtube fa-xl social-color"></i
+          ></a>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
