--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
       integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
       crossorigin="anonymous"
     />
-
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -68,7 +67,6 @@
                   >Home</a
                 >
               </li>
-
               <li class="navbar-item">
                 <a
                   class="nav-link active"
@@ -101,17 +99,18 @@
             <section class="callout jumbotron text-center">
               <h1 id="home-header">BANDICAPS</h1>
               <p id="home-text">GOLF SOCIETY</p>
-              <button
-                type="button"
-                class="btn btn-sm"
-                style="
-                  --bs-btn-padding-y: 0.5rem;
-                  --bs-btn-padding-x: 6rem;
-                  --bs-btn-font-size: 0.8rem;
-                "
-              >
-                <a href="gallery.html" class="about-btn">ABOUT US</a>
-              </button>
+              <a href="gallery.html">
+                <div
+                  class="btn btn-sm"
+                  style="
+                    --bs-btn-padding-y: 0.5rem;
+                    --bs-btn-padding-x: 6rem;
+                    --bs-btn-font-size: 0.8rem;
+                  "
+                >
+                  About Us
+                </div>
+              </a>
             </section>
           </div>
         </div>
