final touches to neaten code

--- a/gallery.html
+++ b/gallery.html
@@ -10,7 +10,6 @@
       integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
       crossorigin="anonymous"
     />
-
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -59,7 +58,6 @@
                   >Home</a
                 >
               </li>
-
               <li class="navbar-item">
                 <a
                   class="nav-link active"
@@ -68,7 +66,6 @@
                   >Gallery</a
                 >
               </li>
-
               <li class="navbar-item">
                 <a
                   class="nav-link active"
@@ -135,6 +132,7 @@
       </div>
     </section>
 
+    <!-- BANDICAPS OPEN DETAILS -->
     <section class="container-fluid text-center open-container">
       <div class="open-title">The Bandicaps Open</div>
       <div id="open-details" class="row">
