--- a/members.html
+++ b/members.html
@@ -10,7 +10,6 @@
       integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
       crossorigin="anonymous"
     />
-
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -82,6 +81,7 @@
         </div>
       </nav>
     </div>
+
     <!--TITLE and BACKGROUND IMAGE-->
     <!-- form inspired from https://getbootstrap.com/docs/5.3/forms/layout/ -->
     <section class="container-fluid members-container">
@@ -155,6 +155,7 @@
         </div>
       </div>
 
+      <!-- APPLICATION TO BECOME A MEMBER -->
       <div id="line-break"></div>
       <div class="container-fluid apply-container">
         <h1 class="apply-header">Want to become a member?</h1>
