--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           >
             <ul class="navbar-nav">
               <li class="navbar-item">
-                <a class="nav-link active" aria-current="page" href="Index.html"
+                <a class="nav-link active" aria-current="page" href="index.html"
                   >Home</a
                 >
               </li>
