--- a/index.html
+++ b/index.html
@@ -120,22 +120,38 @@
     <footer class="container-fluid text-center footer-container">
       <div id="footer-details" class="row">
         <div class="col">
-          <a href="https://www.instagram.com" target="_blank"
+          <a
+            href="https://www.instagram.com"
+            target="_blank"
+            aria
+            label="Visit our instagram page, opens in a new tab"
             ><i class="fa-brands fa-instagram fa-xl social-color"></i
           ></a>
         </div>
         <div class="col">
-          <a href="https://www.facebook.com" target="_blank"
+          <a
+            href="https://www.facebook.com"
+            target="_blank"
+            aria
+            label="Visit our facebook page, opens in a new tab"
             ><i class="fa-brands fa-facebook-f fa-xl social-color"></i
           ></a>
         </div>
         <div class="col">
-          <a href="https://www.twitter.com" target="_blank"
+          <a
+            href="https://www.twitter.com"
+            target="_blank"
+            aria
+            label="Visit our twitter page, opens in a new tab"
             ><i class="fa-brands fa-twitter fa-xl social-color"></i
           ></a>
         </div>
         <div class="col">
-          <a href="https://www.youtube.com" target="_blank"
+          <a
+            href="https://www.youtube.com"
+            target="_blank"
+            aria
+            label="Visit our youtube page, opens in a new tab"
             ><i class="fa-brands fa-youtube fa-xl social-color"></i
           ></a>
         </div>
