added description to gallery/members

--- a/gallery.html
+++ b/gallery.html
@@ -3,6 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Golf. Golf Society. Bandicaps Golf Society. Golf Course. Golf Social. Golf clubs."
+    />
+    <meta
+      name="keywords"
+      content="golf, golf society, bandicaps golf society, golf clubs, golf sport, sport, golf, course"
+    />
     <title>BANDICAPS Golf Society</title>
     <link
       rel="stylesheet"
